naras 앱 next로 마이그레이션

--- a/section14/components/Layout.module.css
+++ b/section14/components/Layout.module.css
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   font-weight: bold;
+  cursor: pointer;
 }
 .logo {
   cursor: pointer;
@@ -18,4 +19,7 @@
   width: 700px;
   margin: 0 auto;
   padding: 80px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
